@@ -1,11 +1,7 @@
 package com.devcollab.controller.rest;
 
 import com.devcollab.domain.Notification;
-import com.devcollab.domain.Project;
-import com.devcollab.domain.Task;
 import com.devcollab.dto.response.NotificationResponseDTO;
-import com.devcollab.repository.ProjectRepository;
-import com.devcollab.repository.TaskRepository;
 import com.devcollab.service.system.NotificationService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -15,7 +11,7 @@ import org.springframework.security.oauth2.core.oidc.user.DefaultOidcUser;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Slf4j
 @RestController
@@ -24,8 +20,6 @@ import java.util.stream.Collectors;
 public class NotificationRestController {
 
     private final NotificationService notificationService;
-    private final ProjectRepository projectRepository;
-    private final TaskRepository taskRepository;
 
     @GetMapping
     public ResponseEntity<?> getNotifications(Authentication auth) {
@@ -35,20 +29,15 @@ public class NotificationRestController {
         String email = extractEmail(auth);
         log.info("📩 GET /api/notifications for {}", email);
 
-        try {
-            List<Notification> notifications = notificationService.getNotificationsByUser(email);
-            if (notifications == null || notifications.isEmpty())
-                return ResponseEntity.ok(List.of());
+        List<Notification> notifications = notificationService.getNotificationsByUser(email);
 
-            List<NotificationResponseDTO> responseList =
-                    notifications.stream().map(this::mapToResponseDTO).filter(dto -> dto != null)
-                            .collect(Collectors.toList());
+        List<NotificationResponseDTO> responseList =
+                notifications.stream()
+                        .map(this::mapToResponseDTO)
+                        .filter(Objects::nonNull)
+                        .toList();
 
-            return ResponseEntity.ok(responseList);
-        } catch (Exception e) {
-            log.error("❌ Error loading notifications: {}", e.getMessage(), e);
-            return ResponseEntity.internalServerError().body("Error: " + e.getMessage());
-        }
+        return ResponseEntity.ok(responseList);
     }
 
     @PutMapping("/{id}/read")
@@ -57,20 +46,13 @@ public class NotificationRestController {
             return ResponseEntity.status(401).body("Unauthenticated");
 
         String email = extractEmail(auth);
-        log.info("📖 PUT /api/notifications/{}/read by {}", id, email);
+        boolean updated = notificationService.markAsRead(id, email);
+        if (!updated)
+            return ResponseEntity.status(403)
+                    .body("You cannot mark someone else's notification as read.");
 
-        try {
-            boolean updated = notificationService.markAsRead(id, email);
-            if (!updated)
-                return ResponseEntity.status(403)
-                        .body("You cannot mark someone else's notification as read.");
-            return ResponseEntity.noContent().build();
-        } catch (Exception e) {
-            log.error("❌ markAsRead() failed: {}", e.getMessage(), e);
-            return ResponseEntity.internalServerError().body("Error: " + e.getMessage());
-        }
+        return ResponseEntity.noContent().build();
     }
-
 
     @PutMapping("/read-all")
     public ResponseEntity<?> markAllAsRead(Authentication auth) {
@@ -78,17 +60,27 @@ public class NotificationRestController {
             return ResponseEntity.status(401).body("Unauthenticated");
 
         String email = extractEmail(auth);
-        try {
-            int updated = notificationService.markAllAsRead(email);
-            return ResponseEntity.ok("✅ Marked " + updated + " notifications as read.");
-        } catch (Exception e) {
-            log.error("❌ markAllAsRead() failed: {}", e.getMessage(), e);
-            return ResponseEntity.internalServerError().body("Error: " + e.getMessage());
-        }
+        int updated = notificationService.markAllAsRead(email);
+
+        return ResponseEntity.ok("Đã đánh dấu " + updated + " thông báo là đã đọc.");
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteNotification(@PathVariable("id") Long id) {
+    public ResponseEntity<?> deleteNotification(@PathVariable("id") Long id, Authentication auth) {
+        if (auth == null)
+            return ResponseEntity.status(401).body("Unauthenticated");
+
+        String email = extractEmail(auth);
+        // Check ownership before deleting
+        List<Notification> notifications = notificationService.getNotificationsByUser(email);
+        boolean isOwner = notifications.stream()
+                .anyMatch(n -> n.getNotificationId().equals(id));
+        
+        if (!isOwner) {
+            return ResponseEntity.status(403)
+                    .body("You cannot delete someone else's notification.");
+        }
+        
         notificationService.deleteNotification(id);
         return ResponseEntity.noContent().build();
     }
@@ -111,6 +103,7 @@ public class NotificationRestController {
         return auth.getName();
     }
 
+
     private NotificationResponseDTO mapToResponseDTO(Notification n) {
         try {
             if (n == null)
@@ -118,36 +111,15 @@ public class NotificationRestController {
 
             String type = n.getType() != null ? n.getType().trim().toUpperCase() : "GENERAL";
             String title = n.getTitle() != null ? n.getTitle() : "Thông báo mới";
-
             String message = n.getMessage() != null ? n.getMessage() : "Bạn có thông báo mới.";
-            String link = n.getLink() != null ? n.getLink() : "#";
-            String projectName = "Không xác định";
 
-            if (n.getReferenceId() != null && type.startsWith("PROJECT_")) {
-                projectName = projectRepository.findById(n.getReferenceId()).map(Project::getName)
-                        .orElse("Không xác định");
+            String link = (n.getLink() == null || n.getLink().isBlank()) ? "#" : n.getLink();
 
-                if (link == null || link.equals("#") || link.isBlank()) {
-                    link = "/view/pm/project/board?projectId=" + n.getReferenceId();
-                }
-            } else if (n.getReferenceId() != null && type.startsWith("TASK_")) {
-                Task task = taskRepository.findById(n.getReferenceId()).orElse(null);
-                if (task != null && task.getProject() != null) {
-                    projectName = task.getProject().getName();
-                    link = "/projects/" + task.getProject().getProjectId() + "/tasks/"
-                            + task.getTaskId();
-                }
-            }
+            String senderName = (n.getSender() != null && n.getSender().getName() != null)
+                    ? n.getSender().getName()
+                    : "Hệ thống";
 
-            if (message.contains("{project}"))
-                message = message.replace("{project}", projectName);
-
-            String senderName = "Hệ thống";
-            String senderAvatar = null;
-            if (n.getSender() != null) {
-                senderName = n.getSender().getName() != null ? n.getSender().getName() : "Hệ thống";
-                senderAvatar = n.getSender().getAvatarUrl();
-            }
+            String senderAvatar = n.getSender() != null ? n.getSender().getAvatarUrl() : null;
 
             return NotificationResponseDTO.builder().id(n.getNotificationId()).type(type)
                     .title(title).message(message).status(n.getStatus()).createdAt(n.getCreatedAt())
@@ -155,24 +127,37 @@ public class NotificationRestController {
                     .senderName(senderName).senderAvatar(senderAvatar).build();
 
         } catch (Exception e) {
-            log.warn("⚠️ mapToResponseDTO() error for {}: {}", n.getNotificationId(),
-                    e.getMessage());
+            log.warn("⚠ mapToResponseDTO() error for {}: {}",
+                    n != null ? n.getNotificationId() : "null", e.getMessage());
             return null;
         }
     }
 
     private String mapIcon(String type) {
         return switch (type) {
-            case "TASK_MEMBER_ADDED" -> "👥";
+            case "PROJECT_CREATED" -> "🗂️";
+            case "SCHEDULE_CREATED" -> "📅";
+            case "PROJECT_ARCHIVED" -> "📦";
+            case "MEMBER_ADDED" -> "👥";
+            case "PROJECT_MEMBER_ROLE_UPDATED" -> "👤";
+
+            case "TASK_MEMBER_ADDED" -> "👤";
             case "TASK_MEMBER_REMOVED" -> "❌";
             case "TASK_COMMENTED" -> "💬";
+            case "TASK_COMMENT_MENTION" -> "📣";
+            case "PROJECT_COMMENT_MENTION" -> "📢";
             case "TASK_DUE_SOON" -> "⏰";
-            case "TASK_ATTACHMENT_ADDED" -> "📎";
-            case "TASK_ATTACHMENT_DELETED" -> "🗑️";
-            case "PROJECT_CREATED" -> "🗂️";
-            case "PROJECT_ARCHIVED" -> "📦";
-            case "PROFILE_UPDATED" -> "👤";
-            case "PASSWORD_CHANGED" -> "🔒";
+            case "TASK_FOLLOWED" -> "⭐";
+
+            case "PROJECT_LINK_REGENERATED" -> "🔗";
+
+            case "JOIN_REQUEST_RECEIVED" -> "📩";
+            case "JOIN_REQUEST_APPROVED" -> "✅";
+            case "JOIN_REQUEST_REJECTED" -> "❌";
+
+            case "PASSWORD_CHANGED" -> "🔑";
+            case "PROFILE_UPDATED" -> "⚙️";
+
             default -> "🔔";
         };
     }
